# formai-3d-modeler

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: architecture.md  implementation-plan.md  product-spec.md
modeling/: cad_surface_hit_core.py  curved_feature_diagnostics.py  edit_mesh_element.py  export_transformed_model.py  face_geometry_signatures.py  face_tessellation_mapping.py  generate_model.py  local_cad_feature.py  local_cad_feature_core.py  local_stl_edit.py  manufacturing_features.py  pyproject.toml  resolve_cad_surface_hit.py  restore_uploaded_model_snapshot.py  split_and_cap.py  stl_mesh_repair.py  test_cad_surface_hit.py  test_edit_mesh_element.py  test_export_transformed_model.py  test_face_geometry_signatures.py  test_face_tessellation_mapping.py  test_interface_openings.py  test_local_cad_curved_feature.py  test_local_cad_edge_feature.py  test_local_cad_feature.py  test_local_cad_feature_replay.py  test_local_cad_planar_feature.py  test_local_stl_edit.py  test_restore_uploaded_model_snapshot.py  test_split_and_cap.py  test_version_geometry_difference.py  test_wall_thickness_analysis.py  version_geometry_difference.py  wall_thickness_analysis.py
modeling/examples/: README.md  esp32-s3-n16r8.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: backend.rs  lib.rs  main.rs
src/components/: CommandPanel.tsx  ImageImportDialog.tsx  InterfaceReviewPanel.tsx  LocalCadFeatureRiskPanel.tsx  ManufacturingToolsDialog.tsx  MeshElementEditPanel.tsx  ModelViewport.tsx  (+6 more)
(+68 files in other folders)
